--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.1",
+    "react-calendar": "^2.16.1",
+    "react-datepicker": "^1.5.0",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
