--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react-calendar": "^2.16.1",
     "react-datepicker": "^1.5.0",
     "react-dom": "^16.4.1",
+    "react-modal": "^3.5.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-suitcss": "^1.1.1",
     "redux": "^4.0.0",
